module(name = "vproweather")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "sysroot_rpi_aarch64",
    build_file_content = """
filegroup(
  name = "sysroot_rpi_aarch64",
  srcs = glob(["*/**"]),
  visibility = ["//visibility:public"],
)
""",
    integrity = "sha256-+7noGApof/s3CZ3MzsG1WsWYJn5CI+EA2o1mYtzebuk=",
    urls = ["https://github.com/mjbots/rpi_bazel/raw/5d31ed20396ba9e91117aff4a3c3c612fecee201/tools/workspace/raspberry_pi/2022-03-03-sysroot-aarch64.tar.xz"],
)

# This sysroot is used by github.com/vsco/bazel-toolchains.
http_archive(
    name = "sysroot_linux_x86_64",
    build_file_content = """
filegroup(
  name = "sysroot_linux_x86_64",
  srcs = glob(["*/**"]),
  visibility = ["//visibility:public"],
)
""",
    sha256 = "84656a6df544ecef62169cfe3ab6e41bb4346a62d3ba2a045dc5a0a2ecea94a3",
    urls = ["https://commondatastorage.googleapis.com/chrome-linux-sysroot/toolchain/2202c161310ffde63729f29d27fe7bb24a0bc540/debian_stretch_amd64_sysroot.tar.xz"],
)

bazel_dep(name = "toolchains_llvm", version = "1.2.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_version = "18.1.8",
)
llvm.sysroot(
    label = "@sysroot_linux_x86_64",
    targets = ["linux-x86_64"],
)

llvm.sysroot(
    label = "@sysroot_rpi_aarch64",
    targets = ["linux-aarch64"],
)

use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")
